[gd_scene load_steps=5 format=3 uid="uid://dcu65u7n4kvkh"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_tooxf"]
[ext_resource type="PackedScene" uid="uid://b6430n4a65u6q" path="res://scenes/player.tscn" id="2_odlv3"]
[ext_resource type="PackedScene" uid="uid://c04hb2twokhvn" path="res://scenes/platform.tscn" id="3_3e2yj"]
[ext_resource type="Theme" uid="uid://fp1h1j23uxgr" path="res://main_theme.tres" id="4_dsgsp"]

[node name="Main" type="Node2D"]
script = ExtResource("1_tooxf")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1164.0
offset_bottom = 661.0
color = Color(0.1428, 0.136, 0.16, 1)

[node name="Player" parent="." instance=ExtResource("2_odlv3")]
position = Vector2(169, 292)

[node name="Platform" parent="." instance=ExtResource("3_3e2yj")]
position = Vector2(0, -2)

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="UI"]
offset_left = 68.0
offset_top = 33.0
offset_right = 183.0
offset_bottom = 66.0
theme = ExtResource("4_dsgsp")
text = "Score: 0"

[node name="MistakesLabel" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -198.0
offset_top = 33.0
offset_right = -40.0
offset_bottom = 66.0
grow_horizontal = 0
theme = ExtResource("4_dsgsp")
text = "Mistakes: 0"

[node name="LevelLabel" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_top = 33.0
offset_right = 80.0
offset_bottom = 84.0
grow_horizontal = 2
theme = ExtResource("4_dsgsp")
theme_override_font_sizes/font_size = 38
text = "Level 1"
